--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,14 @@
         <activity android:name=".SecondActivity">
 
         </activity>
+
         <activity android:name=".MainActivity">
+        </activity>
+
+        <activity android:name=".CameraActivity">
+        </activity>
+
+        <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
